--- a/test.html
+++ b/test.html
@@ -6,6 +6,9 @@
     <title>Full Width Image with Text</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <style>
+        body {
+        background: rgb(31,26,53);
+        }
         .full-width-image {
             position: relative;
             width: 100%;
@@ -20,6 +23,7 @@
             background-color: rgba(0, 0, 0, 0.5);
             padding: 5px 10px;
             border-radius: 5px;
+            font-size: 30px;
         }
     </style>
 </head>
@@ -28,7 +32,7 @@
         <div class="row">
             <div class="col-12">
                 <div class="position-relative">
-                    <img src="images/hero/hero.png" class="img-fluid full-width-image" alt="Full Width Image" width="1000" height="300" style="width:100%">
+                    <img src="images/hero/hero.png" class="img-fluid full-width-image" alt="Elevation Surface" width="1000" height="300" style="width:100%">
                     <div class="bottom-center-text">Joe Sapletal, GISP</div>
                 </div>
             </div>
