--- a/test.html
+++ b/test.html
@@ -1,31 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Full Width Image with Text</title>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        body {
-        background: rgb(31,26,53);
-        }
-        .full-width-image {
-            position: relative;
-            width: 100%;
-            height: auto;
-        }
-        .bottom-center-text {
-            position: absolute;
-            bottom: 10px;
-            left: 50%;
-            transform: translateX(-50%);
-            color: white;
-            background-color: rgba(0, 0, 0, 0.5);
-            padding: 5px 10px;
-            border-radius: 5px;
-            font-size: 30px;
-        }
-    </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Full Width Image with Text</title>
+<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+<style>
+body {
+background: rgb(31,26,53);
+}
+h1 {
+color:white;
+text-align: center;
+font-family: Arial;
+font-weight: bold;
+font-size: 30px;
+}
+h2 {
+color:white;
+text-align: center;
+font-family: Arial;
+font-weight: noraml;
+font-size: 15px;
+}
+.full-width-image {
+    position: relative;
+    width: 100%;
+    height: auto;
+}
+.bottom-center-text {
+    position: absolute;
+    bottom: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+    color: white;
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 5px 10px;
+    border-radius: 5px;
+    font-size: 30px;
+}
+</style>
 </head>
 <body>
     <div class="container-fluid">
@@ -38,5 +52,8 @@
             </div>
         </div>
     </div>
+    <h2>GIS Manager</h2>
+    <h2>Dakota County Information Technology</h2>
+    <h2>Office of GIS</h2>
 </body>
 </html>
