--- a/index.html
+++ b/index.html
@@ -1,79 +1,56 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Joe Sapletal, GISP</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/5.3.3/css/bootstrap-theme.min.css" rel="stylesheet">
-  </head>
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Full Width Image with Text</title>
+<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 <style>
 body {
-    background: rgb(31,26,53);
+background: rgb(31,26,53);
 }
 h1 {
-    color:white;
-    text-align: center;
-    font-family: Arial;
-    font-weight: bold;
-    font-size: 30px;
+color:white;
+text-align: center;
+font-family: Arial;
+font-weight: bold;
+font-size: 30px;
 }
 h2 {
-    color:white;
-    text-align: center;
-    font-family: Arial;
-    font-weight: noraml;
-    font-size: 15px;
+color:white;
+text-align: center;
+font-family: Arial;
+font-weight: noraml;
+font-size: 15px;
 }
-img {
-  max-width: 100%;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  height: auto;
+.full-width-image {
+    position: relative;
+    width: 100%;
+    height: auto;
 }
-.container {
-  position: relative;
-  text-align: center;
-  max-width: 100%;
-  margin: 0 auto;
-  color: white;
-}
-.centered {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  font-family: Arial;
-  font-weight: bold;
-  font-size: 30px;
-}
-.container-fluid .content {
-  position: absolute;
-  bottom: 0;
-  background: rgb(31, 26, 53); /* Fallback color */
-  background: linear-gradient(0deg, rgba(31,26,53,1) 0%, rgba(31,26,53,0.753466352361257) 75%, rgba(66,52,105,0) 100%);
-  color: #f1f1f1;
-  width: 100%;
-  padding: 5px;
-}
-.img {
-  max-width: 100%;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  height: auto;
+.bottom-center-text {
+    position: absolute;
+    bottom: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+    color: white;
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 5px 10px;
+    border-radius: 5px;
+    font-size: 30px;
 }
 </style>
+</head>
 <body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <div class="container-fluid">
-        <div background>
-            <div class="content">
-                <h1>Joe Sapletal, GISP</h1>
+        <div class="row">
+            <div class="col-12">
+                <div class="position-relative">
+                    <img src="images/hero/hero.png" class="img-fluid full-width-image" alt="Elevation Surface" width="1000" height="300" style="width:100%">
+                    <div class="bottom-center-text">Joe Sapletal, GISP</div>
+                </div>
             </div>
         </div>
-        <img src="images/hero/hero.png" alt="elevation surface" width="1000" height="300" style="width:100%">
     </div>
     <h2>GIS Manager</h2>
     <h2>Dakota County Information Technology</h2>
