--- a/circle.html
+++ b/circle.html
@@ -8,13 +8,35 @@
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+  <style>
+  body {
+    background: rgb(31,26,53);
+  }
+  h1 {
+    color:white;
+    text-align: center;
+    font-family: Arial;
+    font-weight: bold;
+    font-size: 30px;
+    }
+  h2 {
+    color:white;
+    text-align: center;
+    font-family: Arial;
+    font-weight: noraml;
+    font-size: 15px;
+  }
+  </style>
 </head>
 <body>
 
-<div class="container">
-  <h2>Circle</h2>
-  <p>The .rounded-circle class shapes the image to a circle:</p>            
+<div class="container">   
   <img src="images\hero\hero.png" class="rounded-circle" alt="Elevation Surface" width="100" height="100"> 
+  <h1>Joe Sapletal, GISP</h1>    
+  <h2>GIS Manager</h2>
+  <h2>Dakota County Information Technology</h2>
+  <h2>Office of GIS</h2>
+   
 </div>
 
 </body>
