--- a/circle.html
+++ b/circle.html
@@ -5,9 +5,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
-  <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/jquery@5.3.3/dist/jquery.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@5.3.3/dist/umd/popper.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <style>
   body {
     background: rgb(31,26,53);
@@ -31,11 +31,19 @@
 <body>
 
 <div class="container">   
-  <img src="images\hero\hero.png" class="rounded-circle" alt="Elevation Surface" width="100" height="100"> 
-  <h1>Joe Sapletal, GISP</h1>    
-  <h2>GIS Manager</h2>
-  <h2>Dakota County Information Technology</h2>
-  <h2>Office of GIS</h2>
+    <div class="row">
+        <div class="col"><img src="images\hero\hero.png" class="rounded-circle" alt="Elevation Surface" width="100" height="100"> </div>
+        <div class="col">
+            <h1>Joe Sapletal, GISP</h1>    
+            <h2>GIS Manager</h2>
+            <h2>Dakota County Information Technology</h2>
+            <h2>Office of GIS</h2> 
+        </div>
+        <div class="col"></div>
+        <div class="col"></div>
+      </div>
+  
+
    
 </div>
 
