--- a/circle.html
+++ b/circle.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap Example</title>
+  <title>Joe Sapletal, GISP</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
@@ -17,7 +17,7 @@
     text-align: center;
     font-family: Arial;
     font-weight: bold;
-    font-size: 30px;
+    font-size: 20px;
     }
   h2 {
     color:white;
@@ -29,7 +29,7 @@
   </style>
 </head>
 <body>
-
+<br>
 <div class="container">   
     <div class="row">
         <div class="col"><img src="images\hero\hero.png" class="rounded-circle" alt="Elevation Surface" width="100" height="100"> </div>
