--- a/circle.html
+++ b/circle.html
@@ -33,12 +33,13 @@
 <div class="container">   
     <div class="row">
         <div class="col"><img src="images\hero\hero.png" class="rounded-circle" alt="Elevation Surface" width="100" height="100"> </div>
-        <div class="col">
+        <div class="col-6">
             <h1>Joe Sapletal, GISP</h1>    
             <h2>GIS Manager</h2>
             <h2>Dakota County Information Technology</h2>
             <h2>Office of GIS</h2> 
         </div>
+        <div class="col"></div>
       </div>
   
 
