--- a/circle.html
+++ b/circle.html
@@ -43,11 +43,12 @@
             <h2>Office of GIS</h2> 
         </div>
         <div class="col"></div>
-      </div>
-  
-
-   
+    </div>  
 </div>
-
+<div class="vstack gap-3 max-w-xs mx-auto">
+    <button type="button" class="btn btn-primary">Save changes</button>
+    <button type="button" class="btn btn-default">Dakota County ArcGIS Online</button>
+    <a href="https://dakotacounty.maps.arcgis.com" class="btn btn-link">Back</a>
+</div>
 </body>
 </html>
