--- a/circle.html
+++ b/circle.html
@@ -45,6 +45,12 @@
         <div class="col"></div>
     </div>  
 </div>
-<a href="https://google.com" class="btn btn-primary">Go to Google</a>
+<br>
+<div class="container">   
+    <div class="row">
+        <div class="col"></div> 
+        <div class="col-10"><a href="https://google.com" class="btn btn-primary">Go to Google</a></div> 
+        <div class="col"></div>    
+    </div>
 </body>
 </html>
