--- a/circle.html
+++ b/circle.html
@@ -52,5 +52,9 @@
         <div class="col-10"><a href="https://google.com" class="btn btn-primary">Go to Google</a></div> 
         <div class="col"></div>    
     </div>
+    <div class="d-grid gap-2 col-6 mx-auto">
+        <button class="btn btn-primary" type="button" data-mdb-ripple-init>Button</button>
+        <button class="btn btn-primary" type="button" data-mdb-ripple-init>Button</button>
+      </div>
 </body>
 </html>
