--- a/circle.html
+++ b/circle.html
@@ -43,12 +43,13 @@
             <h2>Office of GIS</h2> 
         </div>
         <div class="col"></div>
+    </div>
+    <div class="row">
+        <div class="d-grid gap-2 col-6 mx-auto">
+            <button class="btn btn-primary" type="button" data-mdb-ripple-init>Button</button>
+            <button class="btn btn-primary" type="button" data-mdb-ripple-init>Button</button>
+        </div>
     </div>  
-</div>
-<br>
-<div class="d-grid gap-2 col-6 mx-auto">
-    <button class="btn btn-primary" type="button" data-mdb-ripple-init>Button</button>
-    <button class="btn btn-primary" type="button" data-mdb-ripple-init>Button</button>
 </div>
 </body>
 </html>
