--- a/circle.html
+++ b/circle.html
@@ -44,12 +44,14 @@
         </div>
         <div class="col"></div>
     </div>
+</div>
+<div class="container mt-3">   
     <div class="row">
-        <div class="d-grid gap-2 col-6 mx-auto">
+        <div class="d-grid gap-2 mx-auto">
             <button class="btn btn-primary" type="button" data-mdb-ripple-init>Button</button>
             <button class="btn btn-primary" type="button" data-mdb-ripple-init>Button</button>
         </div>
-    </div>  
+    </div> 
 </div>
 </body>
 </html>
