--- a/circle.html
+++ b/circle.html
@@ -4,9 +4,9 @@
   <title>Joe Sapletal, GISP</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
-  <script src="https://cdn.jsdelivr.net/npm/jquery@5.3.3/dist/jquery.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@5.3.3/dist/umd/popper.min.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+  <!--<script src="https://cdn.jsdelivr.net/npm/jquery@5.3.3/dist/jquery.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@5.3.3/dist/umd/popper.min.js"></script>-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <style>
   body {
@@ -45,13 +45,9 @@
         <div class="col"></div>
     </div>
 </div>
-<div class="container mt-3">   
-    <div class="row">
-        <div class="d-grid gap-2 mx-auto">
-            <button class="btn btn-primary" type="button" data-mdb-ripple-init>Button</button>
-            <button class="btn btn-primary" type="button" data-mdb-ripple-init>Button</button>
-        </div>
-    </div> 
+<div class="d-grid gap-3">   
+    <button class="btn btn-primary" type="button" data-mdb-ripple-init>Button</button>
+    <button class="btn btn-primary" type="button" data-mdb-ripple-init>Button</button>
 </div>
 </body>
 </html>
