--- a/circle.html
+++ b/circle.html
@@ -45,9 +45,12 @@
         <div class="col"></div>
     </div>
 </div>
-<div class="d-grid gap-3">   
-    <button class="btn btn-primary" type="button" data-mdb-ripple-init>Button</button>
-    <button class="btn btn-primary" type="button" data-mdb-ripple-init>Button</button>
+<br>
+<div class="container mt-3">
+    <div class="d-grid gap-3">   
+        <button class="btn btn-primary" type="button" data-mdb-ripple-init>Button</button>
+        <button class="btn btn-primary" type="button" data-mdb-ripple-init>Button</button>
+    </div>
 </div>
 </body>
 </html>
