--- a/circle.html
+++ b/circle.html
@@ -57,8 +57,8 @@
 <br>
 <div class="container mt-3">
     <div class="d-grid gap-3">   
-        <button class="btn btn-primary" type="button" data-mdb-ripple-init><a href="https://dakotacounty.maps.arcgis.com" style="color:inherit">ArcGIS Online</a></button>
-        <button class="btn btn-primary" type="button" data-mdb-ripple-init>Button</button>
+        <button class="btn btn-outline-primary" type="button" data-mdb-ripple-init><a href="https://dakotacounty.maps.arcgis.com" style="color:inherit">ArcGIS Online</a></button>
+        <button class="btn-outline-primary" type="button" data-mdb-ripple-init>Button</button>
     </div>
 </div>
 </body>
