--- a/circle.html
+++ b/circle.html
@@ -33,10 +33,10 @@
     text-decoration: none;
   }
   .btn-outline-primary {
-    color: rgb(180, 20, 224);
+    color: #c10ace;
     background-color: transparent;
     background-image: none;
-    border-color: #7cc
+    border-color: #c10ace;
 }
   </style>
 </head>
@@ -58,7 +58,7 @@
 <div class="container mt-3">
     <div class="d-grid gap-3">   
         <button class="btn btn-outline-primary" type="button" data-mdb-ripple-init><a href="https://dakotacounty.maps.arcgis.com" style="color:inherit">ArcGIS Online</a></button>
-        <button class="btn-outline-primary" type="button" data-mdb-ripple-init>Button</button>
+        <button class="btn btn-outline-primary" type="button" data-mdb-ripple-init><a href="https://dakotacounty.maps.arcgis.com" style="color:inherit">Dakota County</a></button>
     </div>
 </div>
 </body>
