--- a/beaconstyle.html
+++ b/beaconstyle.html
@@ -7,17 +7,43 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 <style>
-body {
+  body {
     background: rgb(31,26,53);
   }
+  h1 {
+    color:white;
+    text-align: center;
+    font-family: Arial;
+    font-weight: bold;
+    font-size: 18px;
+    }
+  h2 {
+    color:white;
+    text-align: center;
+    font-family: Arial;
+    font-weight: noraml;
+    font-size: 13px;
+  }
+  img {
+    border: 4px solid #c10ace;
+  }
+  a {
+    text-decoration: none;
+  }
+  .btn-outline-primary {
+    color: #c10ace;
+    background-color: transparent;
+    background-image: none;
+    border-color: #c10ace;
+}
 </style>
 </head>
 <body>
 <br>
 <div class="container">   
     <div class="row">
-        <div class="col-6"><img src="images\hero\hero.png" class="rounded-circle" alt="Elevation Surface" width="100" height="100"> </div></div>
-        <div class="col-6">
+        <div class="col"><img src="images\hero\hero.png" class="rounded-circle" alt="Elevation Surface" width="100" height="100"> </div></div>
+        <div class="col">
             <h1>Joe Sapletal, GISP</h1>    
             <h2>GIS Manager</h2>
             <h2>Dakota County Information Technology</h2>
