--- a/beaconstyle.html
+++ b/beaconstyle.html
@@ -40,9 +40,10 @@
 </head>
 <body>
 <br>
+<br>
 <div class="container">   
     <div class="row">
-        <div class="col"><img src="images\hero\hero.png" class="rounded-circle" alt="Elevation Surface" width="100" height="100"> </div></div>
+        <div class="col"><img src="images\hero\hero.png" class="rounded-circle" class="center" alt="Elevation Surface" width="80" height="80"> </div></div>
         <div class="col">
             <h1>Joe Sapletal, GISP</h1>    
             <h2>GIS Manager</h2>
