--- a/beaconstyle.html
+++ b/beaconstyle.html
@@ -25,16 +25,19 @@
     font-size: 13px;
   }
   img {
-    border: 4px solid #c10ace;
+    border: 4px solid #ffffff;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
   }
   a {
     text-decoration: none;
   }
   .btn-outline-primary {
-    color: #c10ace;
+    color: #ffffff;
     background-color: transparent;
     background-image: none;
-    border-color: #c10ace;
+    border-color: #ffffff;
 }
 </style>
 </head>
@@ -43,7 +46,7 @@
 <br>
 <div class="container">   
     <div class="row">
-        <div class="col"><img src="images\hero\hero.png" class="rounded-circle" class="center" alt="Elevation Surface" width="80" height="80"> </div></div>
+        <div class="col"><img src="images\hero\hero.png" class="rounded-circle" alt="Elevation Surface" width="80" height="80"> </div></div>
         <div class="col">
             <h1>Joe Sapletal, GISP</h1>    
             <h2>GIS Manager</h2>
