--- a/beaconstyle.html
+++ b/beaconstyle.html
@@ -25,7 +25,7 @@
     font-size: 13px;
   }
   img {
-    border: 4px solid #ffffff;
+    border: 2px solid #ffffff;
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -47,6 +47,7 @@
 <div class="container">   
     <div class="row">
         <div class="col"><img src="images\hero\hero.png" class="rounded-circle" alt="Elevation Surface" width="80" height="80"> </div></div>
+        <div class="col"></div>
         <div class="col">
             <h1>Joe Sapletal, GISP</h1>    
             <h2>GIS Manager</h2>
