--- a/beaconstyle.html
+++ b/beaconstyle.html
@@ -42,12 +42,13 @@
 </style>
 </head>
 <body>
-<br>
-<br>
+<!--<br>
+<br> -->
+<div style="margin-top: 8px;">
 <div class="container">   
     <div class="row">
+        <div style="margin-top: 8px;"></div>
         <div class="col"><img src="images\hero\hero.png" class="rounded-circle" alt="Elevation Surface" width="80" height="80"> </div></div>
-        <div class="col"></div>
         <div class="col">
             <h1>Joe Sapletal, GISP</h1>    
             <h2>GIS Manager</h2>
@@ -56,6 +57,7 @@
         </div>
       <div class="col"></div>
     </div>
+</div>
 </div>
 <br>
 </body>
