--- a/beaconstyle.html
+++ b/beaconstyle.html
@@ -49,6 +49,7 @@
     <div class="row">
         <div style="margin-top: 8px;"></div>
         <div class="col"><img src="images\hero\hero.png" class="rounded-circle" alt="Elevation Surface" width="80" height="80"> </div></div>
+        <div style="margin-top: 8px;"></div>
         <div class="col">
             <h1>Joe Sapletal, GISP</h1>    
             <h2>GIS Manager</h2>
