--- a/beaconstyle.html
+++ b/beaconstyle.html
@@ -56,8 +56,8 @@
             <h2>Dakota County Information Technology</h2>
             <h2>Office of GIS</h2> 
         </div>
-      <div class="col"></div>
-      <div class="card mb-3" style="max-width: 540px;">
+      <div class="col">
+      <div class="card mb-3" style="max-width: 520px;">
         <div class="row g-0">
           <div class="col-md-4">
             <img
