--- a/beaconstyle.html
+++ b/beaconstyle.html
@@ -56,7 +56,9 @@
             <h2>Dakota County Information Technology</h2>
             <h2>Office of GIS</h2> 
         </div>
-      <div class="col">
+      <div class="col"></div>
+      <div class="row"></div>
+      <div class="row">
       <div class="card mb-3" style="max-width: 520px;">
         <div class="row g-0">
           <div class="col-md-4">
@@ -79,6 +81,8 @@
             </div>
           </div>
         </div>
+    </div>
+        <div class="row"></div>
     </div>
     </div>
     
