--- a/beaconstyle.html
+++ b/beaconstyle.html
@@ -45,11 +45,9 @@
 <!--<br>
 <br> -->
 <div style="margin-top: 8px;">
-<div class="container">   
+<div class="container-fluid mt-3">   
     <div class="row">
-        <div style="margin-top: 8px;"></div>
         <div class="col"><img src="images\hero\hero.png" class="rounded-circle" alt="Elevation Surface" width="80" height="80"> </div></div>
-        <div style="margin-top: 8px;"></div>
         <div class="col">
             <h1>Joe Sapletal, GISP</h1>    
             <h2>GIS Manager</h2>
@@ -57,6 +55,11 @@
             <h2>Office of GIS</h2> 
         </div>
       <div class="col"></div>
+
+
+      <div class="row">
+        <div class="col"></div>
+        <div class="col">
       <div class="card mb-3" style="max-width: 520px;">
         <div class="row g-0">
           <div class="col-md-4">
@@ -80,7 +83,10 @@
           </div>
         </div>
     </div>
+        <div class="col"></div>
     </div>
+    </div>
+</div>
     
 </div>
 </div>
