--- a/beaconstyle.html
+++ b/beaconstyle.html
@@ -46,7 +46,7 @@
 <br> -->
 <div style="margin-top: 8px;">
 <div class="container-fluid mt-3">   
-    <div class="row">
+    <div class="row" style="margin-top: 8px;">
         <div class="col"><img src="images\hero\hero.png" class="rounded-circle" alt="Elevation Surface" width="80" height="80"> </div></div>
         <div class="col">
             <h1>Joe Sapletal, GISP</h1>    
@@ -57,7 +57,7 @@
       <div class="col"></div>
 
 
-      <div class="row">
+      <div class="row" style="margin-top: 8px;">
         <div class="col"></div>
         <div class="col">
       <div class="card mb-3" style="max-width: 520px;">
