--- a/beaconstyle.html
+++ b/beaconstyle.html
@@ -48,7 +48,7 @@
 <div class="container-fluid mt-3">   
     <div class="row" style="margin-top: 8px;">
         <div class="col"><img src="images\hero\hero.png" class="rounded-circle" alt="Elevation Surface" width="80" height="80"> </div></div>
-        <div class="col">
+        <div class="col"style="margin-top: 8px;">
             <h1>Joe Sapletal, GISP</h1>    
             <h2>GIS Manager</h2>
             <h2>Dakota County Information Technology</h2>
