--- a/beaconstyle.html
+++ b/beaconstyle.html
@@ -42,20 +42,18 @@
 </style>
 </head>
 <body>
-<!--<br>
-<br> -->
 <div style="margin-top: 8px;">
 <div class="container-fluid mt-3">   
     <div class="row" style="margin-top: 8px;">
-        <div class="col"><img src="images\hero\hero.png" class="rounded-circle" alt="Elevation Surface" width="80" height="80"> </div></div>
+        <div class="col"><img src="images\hero\hero.png" class="rounded-circle" alt="Elevation Surface" width="80" height="80"> </div>
         <div class="col"style="margin-top: 8px;">
             <h1>Joe Sapletal, GISP</h1>    
             <h2>GIS Manager</h2>
             <h2>Dakota County Information Technology</h2>
             <h2>Office of GIS</h2> 
         </div>
-      <div class="col"></div>
-
+    <div class="col"></div>
+    </div>
 
       <div class="row" style="margin-top: 8px;">
         <div class="col"></div>
@@ -86,9 +84,9 @@
         <div class="col"></div>
     </div>
     </div>
-</div>
+            </div>
     
-</div>
+            </div>
 </div>
 <br>
 </body>
