--- a/beaconstyle.html
+++ b/beaconstyle.html
@@ -55,7 +55,7 @@
     <div class="col"style="margin-top: 8px;"></div>
     </div>
 
-    <div class="row" style="margin-top: 8px;">
+    <div class="row" align="center" style="margin-top: 8px;">
         <div class="col"style="margin-top: 8px;"></div>
         <div class="col"style="margin-top: 8px;">
         <div class="card mb-3" style="max-width: 520px;">
