--- a/beaconstyle.html
+++ b/beaconstyle.html
@@ -56,9 +56,9 @@
     </div>
 
     <div class="row" align="center" style="margin-top: 8px;">
-        <div class="col"style="margin-top: 8px;"></div>
-        <div class="col"style="margin-top: 8px;">
-        <div class="card mb-3" style="max-width: 520px;">
+        <div class="col-sm-1"style="margin-top: 8px;"></div>
+        <div class="col-sm-10"style="margin-top: 8px;">
+        <div class="card mb-3" align="center" style="max-width: 520px;">
             <div class="row g-0">
                 <div class="col-md-4">
                     <img
@@ -81,7 +81,7 @@
             </div>
             </div>
         </div>
-        <div class="col"style="margin-top: 8px;"></div>
+        <div class="col-sm-1"style="margin-top: 8px;"></div>
     </div>
     
 </div>
