--- a/beaconstyle.html
+++ b/beaconstyle.html
@@ -45,28 +45,28 @@
 <div style="margin-top: 8px;">
 <div class="container-fluid mt-3">   
     <div class="row" style="margin-top: 8px;">
-        <div class="col"><img src="images\hero\hero.png" class="rounded-circle" alt="Elevation Surface" width="80" height="80"> </div></div>
-        <div class="col"style="margin-top: 8px;">
+        <div class="col-sm-1"><img src="images\hero\hero.png" class="rounded-circle" alt="Elevation Surface" width="80" height="80"> </div></div>
+        <div class="col-sm-10"style="margin-top: 8px;">
             <h1>Joe Sapletal, GISP</h1> 
             <h2>joe.sapletal@co.dakota.mn.us</h2>   
         </div>
-        <div class="col"style="margin-top: 8px;"></div>
+        <div class="col-sm-1"style="margin-top: 8px;"></div>
     </div>
 
     <div class="row" style="margin-top: 8px;">
-        <div class="col"></div></div>
-        <div class="col"style="margin-top: 8px;"></div>
-        <div class="col"style="margin-top: 8px;"></div>
+        <div class="col-sm-1"></div></div>
+        <div class="col-sm-10"style="margin-top: 8px;"></div>
+        <div class="col-sm-1"style="margin-top: 8px;"></div>
     </div>
 
     <div class="row" style="margin-top: 8px;">
-        <div class="col"></div></div>
-        <div class="col"style="margin-top: 8px;">
+        <div class="col-sm-1"></div></div>
+        <div class="col-sm-10"style="margin-top: 8px;">
             <h2>GIS Manager</h2>
             <h2>Dakota County Information Technology</h2>
             <h2>Office of GIS</h2> 
         </div>
-        <div class="col"style="margin-top: 8px;"></div>  
+        <div class="col-sm-1"style="margin-top: 8px;"></div>  
     </div>
 
     <div class="row" align="center" style="margin-top: 8px;">
