--- a/beaconstyle.html
+++ b/beaconstyle.html
@@ -45,17 +45,17 @@
 <div style="margin-top: 8px;">
 <div class="container-fluid mt-3">   
     <div class="row" style="margin-top: 8px;">
-        <div class="col-sm-1"><img src="images\hero\hero.png" class="rounded-circle" alt="Elevation Surface" width="80" height="80"> </div></div>
-        <div class="col-sm-10"style="margin-top: 8px;">
+        <div class="col"><img src="images\hero\hero.png" class="rounded-circle" alt="Elevation Surface" width="80" height="80"> </div></div>
+        <div class="col"style="margin-top: 8px;">
             <h1>Joe Sapletal, GISP</h1> 
             <h2>joe.sapletal@co.dakota.mn.us</h2>   
         </div>
-        <div class="col-sm-1"style="margin-top: 8px;"></div>
+        <div class="col"style="margin-top: 8px;"></div>
     </div>
 
     <div class="row" style="margin-top: 8px;">
         <div class="col-sm-1"></div></div>
-        <div class="col-sm-10"style="margin-top: 8px;"></div>
+        <div class="col-sm-10"style="margin-top: 8px;"><img src="images\icons\generic-websit.svg" width="20" height="20"></div>
         <div class="col-sm-1"style="margin-top: 8px;"></div>
     </div>
 
