--- a/beaconstyle.html
+++ b/beaconstyle.html
@@ -55,7 +55,7 @@
 
     <div class="row" style="margin-top: 8px;">
         <div class="col-sm-1"></div></div>
-        <div class="col-sm-10"style="margin-top: 8px;"><a href="https:\\www.co.dakota.mn.us"><img src="images\icons\generic-website.svg" width="30" height="30" border="none" alt="Dakota County Website"></a></div>
+        <div class="col-sm-10"style="margin-top: 8px;"><a href="https:\\www.co.dakota.mn.us"><img src="images\icons\generic-website.svg" width="30" height="30" border="0" alt="Dakota County Website"></a></div>
         <div class="col-sm-1"style="margin-top: 8px;"></div>
     </div>
 
