--- a/beaconstyle.html
+++ b/beaconstyle.html
@@ -54,19 +54,19 @@
     </div>
 
     <div class="row" style="margin-top: 8px;">
-        <div class="col-sm-1"></div></div>
-        <div class="col-sm-10"style="margin-top: 8px;"><a href="https:\\www.co.dakota.mn.us"><img src="images\icons\generic-website.svg" width="30" height="30" border="0" alt="Dakota County Website"></a></div>
-        <div class="col-sm-1"style="margin-top: 8px;"></div>
+        <div class="col"></div></div>
+        <div class="col"style="margin-top: 8px;"><a href="https:\\www.co.dakota.mn.us"><img src="images\icons\generic-website.svg" width="30" height="30" border="0" outline="none" alt="Dakota County Website"></a></div>
+        <div class="col"style="margin-top: 8px;"></div>
     </div>
 
     <div class="row" style="margin-top: 8px;">
-        <div class="col-sm-1"></div></div>
-        <div class="col-sm-10"style="margin-top: 8px;">
+        <div class="col"></div></div>
+        <div class="col"style="margin-top: 8px;">
             <h2>GIS Manager</h2>
             <h2>Dakota County Information Technology</h2>
             <h2>Office of GIS</h2> 
         </div>
-        <div class="col-sm-1"style="margin-top: 8px;"></div>  
+        <div class="col"style="margin-top: 8px;"></div>  
     </div>
 
     <div class="row" align="center" style="margin-top: 8px;">
