--- a/beaconstyle.html
+++ b/beaconstyle.html
@@ -62,13 +62,13 @@
         </div>
         <div class="col"style="margin-top: 8px;"></div>
     </div>
-</div>
-</div>
 
+    <div class="row" style="margin-top: 8px;">
     <div class="container">
-        <div class="image"> <img src="images\icons\generic-website.svg" alt="This is my image." height="30px"/> </div> 
+        <div class="image"><a href="https://www.co.dakota.mn.us/"> <img src="images\icons\generic-website.svg" alt="This is my image." height="30px"/></a> </div> 
         <div class="image"> <img src="images\icons\instagram.svg" alt="This is my second image." height="30px"/> </div> 
         <div class="image"> <img src="images\icons\linkedin.svg" alt="My third image." height="30px"/> </div> 
+    </div>
     </div>
 
     <div class="row" style="margin-top: 8px;">
@@ -110,7 +110,8 @@
         <div class="col-sm-1"style="margin-top: 8px;"></div>
     </div>
     
-
+</div>
+</div>
 <br>
 </body>
 </html>
