--- a/beaconstyle.html
+++ b/beaconstyle.html
@@ -63,7 +63,7 @@
         <div class="col"style="margin-top: 8px;"></div>
     </div>
 
-    <div class="row" style="margin-top: 8px;">
+    <div class="row" align="center" style="margin-top: 8px;">
         <div class="col"style="margin-top: 8px;"></div>
         <div class="col"style="margin-top: 8px;">
         <div class="image"><a href="https://www.co.dakota.mn.us/"> <img src="images\icons\generic-website.svg" alt="Dakota County" height="30px"/><div class="col"style="margin-top: 8px;"></a> </div> 
@@ -72,7 +72,7 @@
         <div class="col"style="margin-top: 8px;"></div>
     </div>
 
-    <div class="row" style="margin-top: 8px;">
+    <div class="row" align="center" style="margin-top: 8px;">
         <div class="col"></div></div>
         <div class="col"style="margin-top: 8px;">
             <h2>GIS Manager</h2>
