--- a/beaconstyle.html
+++ b/beaconstyle.html
@@ -64,12 +64,13 @@
     </div>
 
     <div class="row" align="center" style="margin-top: 8px;">
-        <div class="col"style="margin-top: 8px;"></div>
-        <div class="col"style="margin-top: 8px;">
+        <div class="col" style="margin-top: 8px;"></div></div>
+        <div class="col" style="margin-top: 8px;">
         <div class="image"><a href="https://www.co.dakota.mn.us/"> <img src="images\icons\generic-website.svg" alt="Dakota County" height="30px"/><div class="col"style="margin-top: 8px;"></a> </div> 
         <div class="image"> <img src="images\icons\instagram.svg" alt="Instagram" height="30px"/> </div> 
-        <div class="image"> <img src="images\icons\linkedin.svg" alt="LinkedIn" height="30px"/> </div> </div>
-        <div class="col"style="margin-top: 8px;"></div>
+        <div class="image"> <img src="images\icons\linkedin.svg" alt="LinkedIn" height="30px"/> </div> 
+        </div>
+        <div class="col" style="margin-top: 8px;"></div>
     </div>
 
     <div class="row" align="center" style="margin-top: 8px;">
